# Face-Attendance-Tracker-main

./: app.py  create_admin.py  face_recognition_utils.py  migrate_db.py  models.py  pyproject.toml  replit.nix  requirements.txt  routes.py
.github/workflows/: main_faceattendancetrackerestg.yml
instance/: attendance.db
static/css/: corporate.css  custom.css
static/js/: charts.js  theme.js  webcam.js
templates/: 404.html  500.html  admin_managers.html  attendance.html  attendance_report.html  base.html  check_inout.html  check_inout_report.html  check_inout_report_pdf.html  dashboard.html  departments.html  employees.html  login.html  manage_classes.html  manage_schedules.html  managers.html  register.html  session_attendance.html
